--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node library for PaPiRus eink display",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node bitimage.js",
     "start": "node app.js",
     "build": "node-gyp configure build"
   },
