--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node bitimage.js",
     "start": "node app.js",
-    "build": "node-gyp configure build"
+    "build": "node-gyp build -d"
   },
   "author": "",
   "license": "ISC",
